# RGT_ParallelProcessor

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
include/: ParallelProcessor.hpp  ParallelProcessor.tpp
src/: main.cpp
